--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         python-version: [3.7, 3.8]
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: 'true'
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
