typing_extensions dependency
Fixes #9

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,8 @@ classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
-
+install_requires =
+    typing_extensions
 packages = find:
 python_requires = >=3.7
 
