--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,17 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+
+[tool.mypy]
+python_version = 3.8
+follow_imports = "normal"
+incremental = true
+disallow_untyped_defs = true
+disallow_untyped_calls = true
+disallow_incomplete_defs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_return_any = true
+warn_unreachable = true
+strict_optional = false
+show_error_codes = true
