--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,12 @@ jobs:
       matrix:
         python-version: [3.8, 3.9, "3.10", 3.11]
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@v3
       with:
         submodules: 'true'
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Test
