--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-build/
-dist/
 *.pyc
-MANIFEST
-.coverage
 __pycache__
-.mypy_cache
-*.egg-info
-.venv/
-test/blab*
+.DS_Store
+/MANIFEST
+/dist
+/build
+/changelog.md
+/.coverage
+/.mypy_cache
+/.pytest_cache
+/.venv
+/*.egg-info
