--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
-name: CI
+name: Test
 
 on:
   push:
     branches: [ main ]
+
   pull_request:
     branches: [ main ]
 
@@ -10,17 +11,27 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 1
+      max-parallel: 2
       matrix:
-        python-version: [3.8, 3.9, "3.10", 3.11]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: 'true'
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Cache venv
+      uses: actions/cache@v4
+      with:
+        path: .venv
+        key: ${{ runner.os }}-${{ matrix.python-version }}-venv-${{ hashFiles('pyproject.toml') }}
+    - name: Set up venv
+      run: make venv
+    - name: Typecheck
+      run: make typecheck
+    - name: Lint
+      run: make lint
     - name: Test
       run: make test
