--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,30 @@
 [project]
 name = "http_sfv"
-dynamic = ["version", "readme"]
+dynamic = ["version"]
 authors = [
     {name="Mark Nottingham", email="mnot@mnot.net"}
 ]
 description = "Parse and serialise HTTP Structured Field Values"
-requires-python = ">=3.8"
+readme = "README.md"
+requires-python = ">=3.9"
 license = {file = "LICENSE.md"}
 classifiers = [
+    "Operating System :: OS Independent",
     "Development Status :: 4 - Beta",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python",
-    "Operating System :: POSIX",
-    "Topic :: Internet :: WWW/HTTP",
-    "Topic :: Software Development :: Libraries :: Python Modules"
+    "License :: OSI Approved :: MIT License"
 ]
 dependencies = [
     "typing_extensions"
 ]
 
 [project.optional-dependencies]
-dev = ["mypy", "playwright", "black", "validate-pyproject"]
+dev = ["mypy", "black", "pylint", "pytest", "pytest-md", "validate-pyproject", "build"]
 
-[tool.setuptools.dynamic]
-version = {attr = "http_sfv.__version__"}
-readme = {file = ["README.md"], content-type = "text/markdown"}
+[project.urls]
+homepage = "https://github.com/mnot/http_sfv"
 
-[tool.setuptools.packages.find]
-where = ["."]
+[project.scripts]
+
 
 [build-system]
 requires = [
@@ -37,13 +33,17 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
-[tool.pyright]
-include = ["http_sfv"]
-defineConstant = { DEBUG = true }
-venv = ".venv"
-reportMissingImports = true
-pythonVersion = "3.11"
-pythonPlatform = "Darwin"
+[tool.setuptools.dynamic]
+version = {attr = "http_sfv.__version__"}
+
+[tool.setuptools.packages.find]
+where = ["."]
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+http_sfv = ["py.typed"]
 
 [tool.mypy]
 follow_imports = "normal"
@@ -55,8 +55,9 @@ warn_redundant_casts = true
 warn_unused_ignores = true
 warn_return_any = true
 warn_unreachable = true
-strict_optional = false
+strict_optional = true
 show_error_codes = true
+
 
 [tool.pylint.basic]
 function-rgx = "[a-z_][a-z0-9_]{1,30}$"
@@ -74,6 +75,7 @@ disable = "C0114,C0115,C0116,W0613"
 reports = false
 
 [tool.pylint.variables]
+dummy-variables-rgx = "_"
 
 [tool.pylint.design]
 max-args=10
