--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ url = https://github.com/mnot/http_sfv
 project_urls =
     Bug Tracker = https://github.com/mnot/http_sfv/issues
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 7 - Inactive
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Programming Language :: Python
